--- a/Atividade-Crocodilo.ipynb
+++ b/Atividade-Crocodilo.ipynb
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "24f0faf1",
    "metadata": {},
    "outputs": [
@@ -557,7 +557,7 @@
     "    \"KNN (k=5)\": acc_knn,\n",
     "    \"Logistic Regression\": acc_log\n",
     "}\n",
-    "\n",
+    "#resultado final kk\n",
     "plt.figure(figsize=(8,5))\n",
     "plt.bar(results.keys(), results.values(), color=[\"blue\", \"green\", \"orange\"])\n",
     "plt.ylabel(\"Acurácia\")\n",
